build the features section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,68 @@
     <div class="sidebar">Sidebar</div>
     <header class="header">Header</header>
     <div class="realtors">Top 3 realtors</div>
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-global" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+        <p class="feature__text">
+          Nobis voluptate esse dolorum iste enim. Consequatur doloremque eveniet
+          deleniti odio temporibus dolor unde atque.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-trophy" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+        <p class="feature__text">
+          Tempora aliquid dicta molestiae, nostrum hic nulla consequuntur dolor
+          voluptatem debitis.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-map-pin" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+        <p class="feature__text">
+          Unde molestiae maiores, autem quae, laudantium, tempora provident
+          corporis accusantium itaque animi.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-key" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+        <p class="feature__text">
+          Tenetur eaque eum modi. Possimus, nesciunt quisquam nobis sed
+          temporibus suscipit voluptatum ipsum facere odio.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-presentation" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+        <p class="feature__text">
+          Omnis corporis commodi, esse repudiandae voluptatibus ab quos,
+          repellat aliquam tempore iste laudantium aliquid.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./img/sprite.svg#icon-lock" />
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
+        <p class="feature__text">
+          Praesentium illo nam quod veniam quasi consequatur, ipsa vero. Illo
+          deserunt ut architecto voluptatibus.
+        </p>
+      </div>
+    </section>
     <div class="story__pictures">Story pictures</div>
     <div class="story__content">Story content</div>
     <section class="homes">Homes</section>
