--- a/index.html
+++ b/index.html
@@ -80,8 +80,25 @@
         </p>
       </div>
     </section>
-    <div class="story__pictures">Story pictures</div>
-    <div class="story__content">Story content</div>
+    <div class="story__pictures">
+      <img
+        src="./img/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__img--1"
+      />
+      <img src="./img/story-2.jpeg" alt="New house" class="story__img--2" />
+    </div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-s">Happy customers</h3>
+      <h2 class="heading-2 heading-2--dark mb-m">
+        &ldquo;The best desicion of our lives&rdquo;
+      </h2>
+      <p class="story__text">
+        Reiciendis minima vero ipsa, iste corporis maiores soluta quasi facilis
+        numquam. Laudantium maxime tempora dignissimos.
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
     <section class="homes">Homes</section>
     <section class="gallery">Gallery</section>
     <footer class="footer">Footer</footer>
