build the footer

--- a/index.html
+++ b/index.html
@@ -393,6 +393,33 @@
         />
       </figure>
     </section>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request purposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Contact us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us!</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        Made with ♥ by
+        <a href="https://www.instagram.com/bagdenius/" class="copyright__link"
+          >@bagdenius</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
